<resources>
	<string name="app_name">Snappy Decisions</string>
	<string name="action_settings">Settings</string>
	<string name="random_decision">Random Decision</string>
	<string name="food_near_me">Food Near Me</string>
	<string name="product_decision">Product Decision</string>
	<string name="food_decision">Food Decision</string>
	<string name="save">Save</string>
	<string name="load">load</string>
	<string name="load_delete">load/delete</string>
	<string name="instructions">Enter your decisions below</string>
	<string name="use_weights">Use Weights</string>
	<string name="enter_text_hint">Enter Text...</string>
	<string name="weight_hint">0-9</string>
	<string name="enter_product_hint">Enter product name...</string>
	<string name="make_decision_button">Make Decision</string>
	<string name="product_rating">Rating:</string>
	<string name="distance">Distance: %d miles</string>
	<string name="filters">Filters</string>
	<string name="nat_type_string">Nationality:</string>
	<string name="type_string">Type of food:</string>
	<string name="american_filter">American</string>
	<string name="asian_filter">Asian</string>
	<string name="mexican_filter">Mexican</string>
	<string name="indian_filter">Indian</string>
	<string name="italian_filter">Italian</string>
	<string name="greek_filter">Greek</string>
	<string name="price_string">Price</string>
	<string name="less_than_ten">$</string>
	<string name="ten_to_thirty">$$</string>
	<string name="more_than_thirty">$$$</string>
	<string name="highest_money">$$$$</string>
	<string name="sandwiches">Sandwiches</string>
	<string name="bbq">Barbeque</string>
	<string name="breakfast">Breakfast and Brunch</string>
	<string name="burgers">Burgers</string>
	<string name="chicken_wings">Chicken Wings</string>
	<string name="sushi">Sushi</string>
	<string name="steak">Steak</string>
	<string name="alpha_filters_note">Note that this filters list is not representative of the final version which will contain many more options.</string>
	<string name="your_options">Your Options</string>
	<string name="open_in_maps_button">Map It!</string>
	<string name="website_button">Yelp</string>
	<string name="title_activity_base">BaseActivity</string>
	<string name="title_random">Random</string>
	<string name="title_food">Food</string>
	<string name="title_product">Product</string>
	<string name="send_to_random_decision">Send to Random Decision</string>
	<string name="help">Help</string>
	<string name="help_random_text">
		Enter the decision in the provided text field.\n
		Press the plus button to add the option to the list.\n
		Press the minus button to remove the option from the list.\n
		To use weights, select the Use Weights checkbox. Weights specify how likely the option will be chosen relative to the other options.\n
		Example: If option 1 has a weight of 5 and option 2 has a weight of 3, then option 1 will be chosen 5/8 of the time, and option 2 will be chosen 3/8 of the time.\n
	</string>
	<string name="Loading">Loading...</string>
	<string name="help_product_text">
		Enter the name of a product or general item you want to search for.\n
		Once the product has been entered, clicking the arrow next to it will open a screen that allows you to choose which website\'s results to look at.\n
		Clicking the Save button will save your list of products to the Random Decision Maker so you can have one selected for you if you still can\'t decide.\n
		The websites are Amazon, Newegg, and eBay. You can compare results from the various sites by navigating to each of them in turn.\n
		Once on the website, hitting the back button will move back through your browsing history. Hitting the up button in the upper left corner of the screen will take you back to the website selection screen.\n
		Hitting the \'+\' button on the menu while browsing the websites allows you to add a product to your list of products so you can narrow down your search as you go.\n
	</string>
	<string name="add_product">Add Product</string>
	<string name="help_food_text">
		Choose a radius in miles you would look to look for restaurants for using the slider at the top. Note that this is linear distance so the actual travelling distance might increase depending on what roads take you there.\n
		Press the filters button and check filters you would like applied to the search (food category and price).\n
		Make decision will choose a random restaurant based on your radius and currently applied filters.\n
		The clear button on the toolbar will reset the radius and filters to their default settings.\n
		The save button will save your current settings (radius and filters) to a unique name.\n
		The load/delete button allows you to load saved settings or delete them.\n
		Map it! and Yelp buttons will take you to google maps and plot your route, or to the restaurants yelp page.\n
	</string>

</resources>
