<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_food_decision"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="csci448.appigators.snappydecisions.FoodDecisionFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_string"
        />
    <CheckBox
        android:id="@+id/american_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/american_filter"
        />
    <CheckBox
        android:id="@+id/asian_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asian_filter"
        />
    <CheckBox
        android:id="@+id/mexican_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mexican_filter"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_string"
        />
    <CheckBox
        android:id="@+id/low_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/less_than_ten"
        />
    <CheckBox
        android:id="@+id/midde_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten_to_thirty"
        />
    <CheckBox
        android:id="@+id/high_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_than_thirty"
        />
    <CheckBox
        android:id="@+id/highest_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_money"
        />
</LinearLayout>
