<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="csci448.appigators.snappydecisions.HelpActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="8dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/random_decision_header"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/random_decision"
				android:textSize="18sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/help_random_description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:bufferType="spannable"
				android:text="@string/help_random_text" />

			<TextView
				android:id="@+id/help_product_header"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/product_decision"
				android:textSize="18sp"
				android:textStyle="bold"
				android:paddingTop="10dp" />

			<TextView
				android:id="@+id/help_product_description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:bufferType="spannable"
				android:text="@string/help_product_text" />
			<TextView
				android:id="@+id/help_food_header"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/food_decision"
				android:textSize="18sp"
				android:textStyle="bold"
				android:paddingTop="10dp" />

			<TextView
				android:id="@+id/help_food_description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:bufferType="spannable"
				android:text="@string/help_food_text" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
