<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/activity_normal_decision"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:focusableInTouchMode="true">

		<TextView
			android:id="@+id/textView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/instructions" />

		<CheckBox
			android:id="@+id/weights_checkbox"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_above="@+id/weight_text"
			android:layout_alignParentEnd="true"
			android:checked="false"
			android:text="@string/use_weights" />

		<EditText
			android:id="@+id/new_decision_text"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@+id/add_button"
			android:layout_below="@id/textView"
			android:hint="@string/enter_text_hint"
			android:inputType="textPersonName"
			android:paddingLeft="8dp"
			android:paddingRight="8dp"
			android:layout_toEndOf="@+id/add_button"
			android:layout_toStartOf="@+id/weight_text"/>

		<EditText
			android:id="@+id/weight_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@+id/new_decision_text"
			android:layout_alignParentEnd="true"
			android:layout_below="@id/textView"
			android:ems="3"
			android:enabled="false"
			android:visibility="gone"
			android:hint="@string/weight_hint"
			android:inputType="numberSigned"
			android:maxLength="1"
			android:padding="8dp"
			android:textAlignment="center" />

		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:srcCompat="@drawable/add"
			android:id="@+id/add_button"
			android:backgroundTint="@android:color/transparent"
			android:layout_below="@id/textView"
			android:layout_alignParentStart="true" />

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@+id/new_decision_text"
			android:id="@+id/linearLayout">

			<TextView
				android:id="@+id/your_options_textview"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_above="@+id/linearLayout"
				android:layout_gravity="center"
				android:textSize="16dp"
				android:textAlignment="center"
				android:padding="8dp"
				android:text="@string/your_options" />

			<ScrollView
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:id="@+id/decision_list_view"
				android:layout_below="@+id/your_options_textview"
				android:layout_alignParentStart="true"
				android:isScrollContainer="false"
				android:layout_weight="3"
				android:focusable="true">

				<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/decision_list_linear_layout">

				<include layout="@layout/logo"
					android:id="@+id/logo"/>

				</LinearLayout>
			</ScrollView>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="2">

				<Button
					android:text="@string/load"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					android:layout_alignParentEnd="true"
					android:id="@+id/load_button"
					style="@style/Widget.AppCompat.Button.Colored" />

				<Button
					android:text="@string/save"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/save_button"
					style="@style/Widget.AppCompat.Button.Colored"
					android:layout_alignParentTop="true"
					android:layout_alignParentStart="true"
					android:layout_alignParentLeft="true" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@+id/save_button"
					android:layout_alignStart="@+id/save_button"
					android:id="@+id/decision_chosen_text"
					android:layout_alignParentEnd="true"
					android:textSize="30sp"
					android:gravity="center_horizontal" />

				<Button
					android:text="@string/make_decision_button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/make_decision_button"
					style="@style/Widget.AppCompat.Button.Colored"
					android:layout_alignParentTop="true"
					android:layout_centerHorizontal="true" />

			</RelativeLayout>
		</LinearLayout>
	</RelativeLayout>

