<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_food_decision"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="csci448.appigators.snappydecisions.FoodDecisionActivity">

	<TextView
		android:id="@+id/distance_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text = "@string/distance"
		/>

	<SeekBar
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/seekBar"
		android:max="50"
		android:progress="25"
		android:layout_below="@+id/distance_text"
		/>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/weight_text">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			/>

		<Button
			android:id="@+id/filters_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/filters"
			style="@style/Widget.AppCompat.Button.Colored"

			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="2">

			<Button
				android:text="@string/load"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentTop="true"
				android:layout_alignParentEnd="true"
				android:id="@+id/load_button"
				style="@style/Widget.AppCompat.Button.Colored" />

			<Button
				android:text="@string/save"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/save_button"
				style="@style/Widget.AppCompat.Button.Colored"
				android:layout_alignParentTop="true"
				android:layout_alignParentStart="true"
				android:layout_marginStart="11dp" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/save_button"
				android:layout_alignStart="@+id/save_button"
				android:id="@+id/decision_chosen_text"
				android:layout_alignParentEnd="true"
				android:textSize="30sp"
				android:gravity="center_horizontal" />

			<Button
				android:text="@string/make_decision_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/decision_chosen_text"
				android:layout_centerHorizontal="true"
				android:id="@+id/make_decision_button"
				style="@style/Widget.AppCompat.Button.Colored" />

		</RelativeLayout>
	</LinearLayout>
</RelativeLayout>
