<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_start"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="csci448.appigators.snappydecisions.StartActivity">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:text="SNAZZY LOGO"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/LOGO"
			android:layout_centerHorizontal="true"
			android:textSize="54sp"
			android:elevation="18dp"
			android:textStyle="normal|bold|italic" />

		<Button
			android:text="@string/random_decision"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/normal_decision_button"
			android:layout_centerVertical="false"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/LOGO"
			style="@style/Widget.AppCompat.Button.Colored"
			android:textColorLink="?android:attr/colorAccent" />

		<Button
			android:text="@string/food_near_me"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/food_decision_button"
			android:layout_below="@+id/normal_decision_button"
			android:layout_centerHorizontal="true"
			style="@style/Widget.AppCompat.Button.Colored" />

		<Button
			android:text="@string/product_decision"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/product_decision_button"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/food_decision_button"
			style="@style/Widget.AppCompat.Button.Colored" />
	</RelativeLayout>
</LinearLayout>
